use network to check if the equipement is connected or not
Signed-off-by: jamal-khey <myjamal89@gmail.com>